# SHRI-ACADEMY

./: .env.example  .gitignore  .replit  AMAZON_Q.md  README.md  amplify.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.agents/: agent_assets_metadata.toml
.agents/memory/: MEMORY.md  abhaya-gate.md  aws-blockchain-iam.md  aws-infrastructure.md  mentor-auth.md  python-sidecar-deployment.md  sagemaker-mentor-pipeline.md  sara-token-config.md  scholarship-arch.md  secops-ragethesage.md  shri-academy-arch.md  shri-academy-student-features.md  stripe-integration-quirks.md  subscription-arch.md
.github/workflows/: deploy-amplify.yml  deploy-monorepo.yml  deploy-service.yml
airflow/dags/: ocw_integration_and_train.py  ragethesage_export_and_train.py
artifacts/api-server/: Dockerfile  build.mjs  package.json
artifacts/shri-academy/: amplify.yml  index.html  package.json
artifacts/sri-platform/: amplify.yml  index.html  package.json  prerender.mjs
artifacts/threat-detection-service/: package.json
contracts/: .env.example  README.md  SaraToken.flat.sol  SaraToken.sol  hardhat.config.ts  package-lock.json  package.json
contracts/scripts/: deploy.ts
data/ocw_curated/: manifest.json  pretrain.txt  train.jsonl
ignition/modules/: SaraProtocol.js
infrastructure/: README.md
infrastructure/terraform/: amplify.tf  (+17 more)
ocw_pipeline/: README.md  crawler.py  curator.py  pipeline.py  processor.py
scripts/: package.json
shri-academy-api/: .env.example  Dockerfile  async_kafka_utils.py  main.py  requirements.txt  sagemaker_client.py  syllabus.py
(+110 files in other folders)
