[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.139.0",
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.50.0",
]
